--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite build && wrangler pages dev",
-		"deploy": "npm run build && wrangler pages deploy",
-		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
+		"preview": "vite build && wrangler dev",
+		"deploy": "npm run build && wrangler deploy --keep-vars",
+		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
+		"test": "vitest run",
+		"test:watch": "vitest watch",
+		"test:coverage": "vitest run --coverage"
 	},
 	"dependencies": {
-		"hono": "^4.10.7"
+		"cloudflare": "^5.2.0",
+		"hono": "^4.10.7",
+		"ip-range-check": "^0.2.0",
+		"zod": "^4.1.13"
 	},
 	"devDependencies": {
 		"@hono/vite-build": "^1.2.0",
 		"@hono/vite-dev-server": "^0.18.2",
+		"@vitest/coverage-v8": "^3.0.0",
 		"vite": "^6.3.5",
+		"vitest": "^3.0.0",
 		"wrangler": "^4.53.0"
 	}
 }
