--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"cloudflare": "^5.2.0",
 		"hono": "^4.10.7",
 		"ip-range-check": "^0.2.0",
+		"jsonc-parser": "^3.3.1",
 		"zod": "^4.1.13"
 	},
 	"devDependencies": {
