--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cloudflare-worker-dns",
+    "name": "tailscale-cloudflare",
     "dockerFile": "Dockerfile",
     "context": "..",
     "mounts": [
