--- a/wrangler.jsonc.example
+++ b/wrangler.jsonc.example
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "cloudflare-tailscale-dns",
+	"name": "tailscale-cloudflare",
 	"compatibility_date": "2025-12-05",
 	"main": "./dist/index.js",
 	"observability": {
