--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,14 +4,12 @@
     "context": "..",
     "mounts": [
         "source=${localWorkspaceFolder},target=/workspace,type=bind",
-        "source=${localEnv:HOME}/.wrangler,target=/home/node/.wrangler,type=bind"
+        "source=${localEnv:HOME}/.wrangler,target=/home/node/.wrangler,type=bind",
+        "source=${localEnv:HOME}/.gitconfig,target=/home/node/.gitconfig,type=bind"
     ],
     "initializeCommand": "mkdir -p ${HOME}/.wrangler",
     "updateRemoteUserUID": true,
     "remoteUser": "node",
-    "extensions": [],
-    "settings": {
-        "terminal.integrated.shell.linux": "/bin/zsh"
-    },
-    "postStartCommand": "npm install && npm run cf-typegen"
+    "postStartCommand": "npm install && npm run cf-typegen",
+    "shutdownAction": "stopContainer"
 }
