feat: migrate configs from env into setting with UI and KV storage

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,13 @@
-# Tailscale to Cloudflare DNS Sync - Environment Variables
-# 
-# For Cloudflare Workers: Configure via Cloudflare Dashboard UI
-# Workers & Pages → Your Worker → Settings → Variables
-# - SECRETS (sensitive): Add in "Secrets" section
-# - VARS (non-sensitive): Add in "Environment Variables" section
+# DNS_RECORD_OWNER_ID (optional)
+# Unique identifier for DNS record ownership.
+# Only set this if you need multiple worker instances managing the same DNS zone.
+# Default: cloudflare-tailscale-dns
 #
-# See README.md for detailed descriptions of each variable.
-
-# =============================================================================
-# REQUIRED SECRETS
-# =============================================================================
-
-TAILSCALE_API_KEY=tskey-api-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-CLOUDFLARE_API_TOKEN=your-cloudflare-api-token
-
-# =============================================================================
-# REQUIRED VARIABLES
-# =============================================================================
-
-TAILSCALE_TAILNET=your-tailnet-name
-CLOUDFLARE_ZONE_ID=your-cloudflare-zone-id
-DOMAIN_FOR_TAILSCALE_ENDPOINT=ts.example.com
-DOMAIN_FOR_WAN_ENDPOINT=wan.example.com
-DOMAIN_FOR_LAN_ENDPOINT=lan.example.com
-LAN_CIDR_RANGES=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-TAILSCALE_TAG_FILTER_REGEX=^tag:dns
-TAILSCALE_TAG_PROXY_REGEX=^tag:proxy
-
-# =============================================================================
-# OPTIONAL VARIABLES
-# =============================================================================
-
-# TAILSCALE_WEBHOOK_SECRET=your-webhook-secret
 # DNS_RECORD_OWNER_ID=cloudflare-tailscale-dns
+
+# LOG_LEVEL (optional)
+# Can be set here for startup logging, but the /config UI setting takes precedence.
+# Valid values: DEBUG, INFO, WARN, ERROR
+# Default: INFO
+#
+# LOG_LEVEL=INFO
