--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"hono": "^4.10.7",
 		"ip-range-check": "^0.2.0",
 		"jsonc-parser": "^3.3.1",
+		"typescript-memoize": "^1.1.1",
 		"zod": "^4.1.13"
 	},
 	"devDependencies": {
