--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,11 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "strict": true,
+    "experimentalDecorators": true,
     "skipLibCheck": true,
     "lib": [
-      "ESNext"
+      "ESNext",
+      "ES2024"
     ],
     "types": [
         "./worker-configuration.d.ts",
