--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
     "strict": true,
-    "experimentalDecorators": true,
+    "target": "esnext",
+    "noEmit": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "downlevelIteration": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "skipLibCheck": true,
-    "lib": [
-      "ESNext",
-      "ES2024"
-    ],
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true,
     "types": [
-        "./worker-configuration.d.ts",
-        "vite/client",
-        "vitest/globals"
+      "./worker-configuration.d.ts"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
-  },
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  }
 }
