--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
-	"name": "cloudflare-tailscale-dns",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite build && wrangler dev",
-		"deploy": "npm run build && wrangler deploy --keep-vars",
-		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
-		"test": "vitest run",
-		"test:watch": "vitest watch",
-		"test:coverage": "vitest run --coverage"
-	},
-	"dependencies": {
-		"cloudflare": "^5.2.0",
-		"hono": "^4.10.7",
-		"ip-range-check": "^0.2.0",
-		"jsonc-parser": "^3.3.1",
-		"typescript-memoize": "^1.1.1",
-		"zod": "^4.1.13"
-	},
-	"devDependencies": {
-		"@hono/vite-build": "^1.2.0",
-		"@hono/vite-dev-server": "^0.18.2",
-		"@vitest/coverage-v8": "^3.0.0",
-		"vite": "^6.3.5",
-		"vitest": "^3.0.0",
-		"wrangler": "^4.53.0"
-	}
+  "name": "tailscale-cloudflare",
+  "version": "0.0.0",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "cf-typegen": "wrangler types",
+    "dev": "waku dev --host 0.0.0.0",
+    "build": "CLOUDFLARE=1 waku build",
+    "start": "wrangler dev --ip 0.0.0.0",
+    "deploy": "waku build && wrangler deploy"
+  },
+  "dependencies": {
+    "cloudflare": "^5.2.0",
+    "hono": "^4.10.0",
+    "ip-range-check": "^0.2.0",
+    "jsonc-parser": "^3.3.1",
+    "react": "~19.2.3",
+    "react-dom": "~19.2.3",
+    "react-server-dom-webpack": "~19.2.3",
+    "typescript-memoize": "^1.1.1",
+    "waku": "1.0.0-alpha.2",
+    "wrangler": "^4.58.0",
+    "zod": "^4.1.13"
+  },
+  "devDependencies": {
+    "@hiogawa/node-loader-cloudflare": "^0.0.2",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/node": "^25.0.6",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/ui": "^4.0.18",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "miniflare": "^4.20260107.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
+  }
 }
