feat: Introduce task-based configuration and migrate to Shadcn UI components.

--- a/package.json
+++ b/package.json
@@ -11,13 +11,25 @@
     "deploy": "waku build && wrangler deploy"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "class-variance-authority": "^0.7.1",
     "cloudflare": "^5.2.0",
+    "clsx": "^2.1.1",
     "hono": "^4.10.0",
     "ip-range-check": "^0.2.0",
     "jsonc-parser": "^3.3.1",
+    "lucide-react": "^0.563.0",
     "react": "~19.2.3",
     "react-dom": "~19.2.3",
     "react-server-dom-webpack": "~19.2.3",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript-memoize": "^1.1.1",
     "waku": "1.0.0-alpha.2",
     "wrangler": "^4.58.0",
